--- a/bbc-website-v2/sass/_events.sass
+++ b/bbc-website-v2/sass/_events.sass
@@ -3,7 +3,7 @@
     display: grid
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr))
     gap: 3rem
-    aligh-items: start
+    align-items: start
     width: 60%
     max-width: $max_width
     margin-inline: auto 
